--- a/test.html
+++ b/test.html
@@ -1,14 +1,14 @@
+﻿
 <!DOCTYPE html>
-<!-- saved from url=(0043)https://loyisa.gitee.io/filecloud/help.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Loyisa's BOT 功能指令</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./Loyisa&#39;s BOT 功能指令_files/bootstrap.min.css">
-    <script src="./Loyisa&#39;s BOT 功能指令_files/jquery.min.js"></script>
-    <script src="./Loyisa&#39;s BOT 功能指令_files/popper.min.js"></script>
-    <script src="./Loyisa&#39;s BOT 功能指令_files/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 <body class="bg-light">
 <main role="main" class="container">
@@ -26,7 +26,7 @@
         </tr>
       </thead>
       <tbody>
-	    <tr><td colspan="2">——————群员/管理/群主可用指令——————</td></tr>
+	    <td colspan="2">——————群员/管理/群主可用指令——————</td></tr>
 		<tr><td>点歌(后面跟歌名,据说跟其他关键词或歌手结果会更准确哦?)</td><td>点歌</td></tr>
 		<tr><td>新番(查看今天更新的新番)</td><td>新番</td></tr>
 		<tr><td>番剧列表(查看目前B站在连载的动画)</td><td>番剧列表</td></tr>
@@ -43,7 +43,7 @@
 		<tr><td>追番转移(转移自己哔哩哔哩的追番列表到机器人)</td><td>/追番转移</td></tr>
 		<tr><td>查警告</td><td>/查警告</td></tr>
 		<tr><td>查自己邀请记录</td><td>/查邀请记录</td></tr>
-		<tr><td colspan="2">————————群主/管理可用指令————————</td></tr>
+		<td colspan="2">————————群主/管理可用指令————————</td></tr>
 		<tr><td>群订阅(UP新视频与直播,机器人会在群内提醒)</td><td>群订阅</td></tr>
 		<tr><td>群取消订阅(取消订阅,机器人不再提醒)</td><td>群取消订阅</td></tr>
 		<tr><td>群追番(更新前一段时间,机器人会在群内提醒)</td><td>群订阅</td></tr>
@@ -77,7 +77,7 @@
 		<tr><td>发布作业</td><td>/发布作业[内容]</td></tr>
 		<tr><td>自定义禁言(最大43200分钟)</td><td>/mute[QQ号/@QQ] [分钟]</td></tr>
 		<tr><td>清除某人的邀请记录</td><td>/清除邀请记录[QQ号/@QQ]</td></tr>
-		<tr><td colspan="2">————————————群主指令————————————</td></tr>
+		<td colspan="2">————————————群主指令————————————</td></tr>
 		<tr><td>清屏</td><td>/清屏</td></tr>
 		<tr><td>艾特全体人员(可以发送消息也可以不填)</td><td>/at[消息]</td></tr>
 		<tr><td>清除本群警告</td><td>/清除本群警告</td></tr>
