--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Loyisa's BOT 功能指令</title>
+    <title>jiajiatest</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
@@ -26,23 +26,6 @@
         </tr>
       </thead>
       <tbody>
-	    <td colspan="2">——————群员/管理/群主可用指令——————</td></tr>
-		<tr><td>点歌(后面跟歌名,据说跟其他关键词或歌手结果会更准确哦?)</td><td>点歌</td></tr>
-		<tr><td>新番(查看今天更新的新番)</td><td>新番</td></tr>
-		<tr><td>番剧列表(查看目前B站在连载的动画)</td><td>番剧列表</td></tr>
-		<tr><td>群追番列表(查看本群订阅的番剧和番剧ID)</td><td>群追番列表</td></tr>
-		<tr><td>追番列表(查看你订阅的番剧和番剧ID)</td><td>追番列表</td></tr>
-		<tr><td>追番(更新前一段时间,机器人会私聊提醒)</td><td>追番</td></tr>
-		<tr><td>取消追番(取消追番,机器人不再提醒)</td><td>取消追番</td></tr>
-		<tr><td>群订阅列表(查看本群订阅的up)</td><td>群订阅列表</td></tr>
-		<tr><td>订阅列表(查看你订阅的up)</td><td>订阅列表</td></tr>
-		<tr><td>订阅(UP新视频与直播私聊提醒)</td><td>订阅</td></tr>
-		<tr><td>取消订阅(机器人不再提醒)</td><td>取消订阅</td></tr>
-		<tr><td>b站在线人数(B站观看人数排行)</td><td>在线人数</td></tr>
-		<tr><td>b站状态监测(B站服务器今天爆炸了吗?)</td><td>b站状态监测</td></tr>
-		<tr><td>追番转移(转移自己哔哩哔哩的追番列表到机器人)</td><td>/追番转移</td></tr>
-		<tr><td>查警告</td><td>/查警告</td></tr>
-		<tr><td>查自己邀请记录</td><td>/查邀请记录</td></tr>
 		<td colspan="2">————————群主/管理可用指令————————</td></tr>
 		<tr><td>群订阅(UP新视频与直播,机器人会在群内提醒)</td><td>群订阅</td></tr>
 		<tr><td>群取消订阅(取消订阅,机器人不再提醒)</td><td>群取消订阅</td></tr>
@@ -149,5 +132,5 @@
 		</tbody>
     </table>
 </main>
-    <p class="text-muted text-center my-3">天枢CloudAI 悠扬 由Loyisa小改</p>
+    <p class="text-muted text-center my-3">Tiansuu CloudAI & JiaJiaRJ</p>
 </body></html>
