--- a/test.html
+++ b/test.html
@@ -12,12 +12,11 @@
 </head>
 <body class="bg-light">
 <main role="main" class="container">
-    <h2>指令前缀：/</h2>
-	<p>指令前面需要带有前缀</p>    
-	<p>点击问号可查看说明，[QQ号]直接写QQ号也可以直接at对方，多条指令会用|间隔，如踢人指令：kick|你妈死了 就代表可以 /kick@QQ 或者 /你妈死了@QQ</p>
-	<p>功能大部分是群主可用,如有普通群员/管理可用会写</p>
-	<p>群主默认高管,管理默认代管,高管/代管默认白名单,不会在list里显示</p>
-	<p>机器人主人QQ894857715</p>
+    <h2>请注意：所有的指令前必须加.</h2>
+	<p>欢迎使用甲甲RJ机器人 以下是机器人的所有使用指令</p>
+	<p>请不要恶意轰炸机器人，否则会受到机器人黑名单的惩罚</p>
+	<p>这是一个免费的机器人，只要是关于MC的群，都可以找甲甲使用</p>
+	<p>甲甲（主人）のQQ:2221121757</p>
     <table class="table">
       <thead>
         <tr>
@@ -26,109 +25,28 @@
         </tr>
       </thead>
       <tbody>
-		<td colspan="2">————————群主/管理可用指令————————</td></tr>
-		<tr><td>群订阅(UP新视频与直播,机器人会在群内提醒)</td><td>群订阅</td></tr>
-		<tr><td>群取消订阅(取消订阅,机器人不再提醒)</td><td>群取消订阅</td></tr>
-		<tr><td>群追番(更新前一段时间,机器人会在群内提醒)</td><td>群订阅</td></tr>
-		<tr><td>群取消追番(取消追番,机器人不再提醒)</td><td>群取消订阅</td></tr>
-		<tr><td>踢人</td><td>/kick[QQ号/@QQ]</td></tr>
-		<tr><td>警告</td><td>/warn[QQ号/@QQ]</td></tr>
-		<tr><td>清除某人警告</td><td>/清除警告[QQ号/@QQ]</td></tr>
-		<tr><td>禁言10分钟</td><td>/mute10m[QQ号/@QQ]</td></tr>
-		<tr><td>禁言1小时</td><td>/mute1h[QQ号/@QQ]</td></tr>
-		<tr><td>禁言12小时</td><td>/mute12h[QQ号/@QQ]</td></tr>
-		<tr><td>禁言1天</td><td>/mute1d[QQ号/@QQ]</td></tr>
-		<tr><td>禁言7天</td><td>/mute7d[QQ号/@QQ]</td></tr>
-		<tr><td>禁言30天</td><td>/mute30d[QQ号/@QQ]</td></tr>
-		<tr><td>解除禁言</td><td>/unmute[QQ号/@QQ]</td></tr>
-		<tr><td>开启全群禁言</td><td>/开启全体禁言</td></tr>
-		<tr><td>关闭全群禁言</td><td>/关闭全体禁言</td></tr>
-		<tr><td>高管列表</td><td>/oplist</td></tr>
-		<tr><td>代管列表</td><td>/modlist</td></tr>
-		<tr><td>查看本群白名单</td><td>/群白名单</td></tr>
-		<tr><td>查看本群黑名单</td><td>/群黑名单</td></tr>
-		<tr><td>增加黑名单</td><td>/群加黑[QQ号/@QQ]</td></tr>
-		<tr><td>去除黑名单</td><td>/群去黑[QQ号/@QQ]</td></tr>
-		<tr><td>查关键词(后面跟你要查的关键词)</td><td>/查关键词[关键词]</td></tr>
-		<tr><td>改群员名片</td><td>/改群员名片[QQ号/@QQ] [昵称]</td></tr>
-		<tr><td>还原群员名片</td><td>/还原群员名片[QQ号/@QQ]</td></tr>
-		<tr><td>通过进群</td><td>/通过进群</td></tr>
-		<tr><td>拒绝进群</td><td>/拒绝进群</td></tr>
-		<tr><td>邀请统计</td><td>/邀请统计</td></tr>
-		<tr><td>查别人邀请记录</td><td>/查别人邀请记录[QQ号/@QQ]</td></tr>
-		<tr><td>发布公告</td><td>/发布公告[内容]</td></tr>
-		<tr><td>发布作业</td><td>/发布作业[内容]</td></tr>
-		<tr><td>自定义禁言(最大43200分钟)</td><td>/mute[QQ号/@QQ] [分钟]</td></tr>
-		<tr><td>清除某人的邀请记录</td><td>/清除邀请记录[QQ号/@QQ]</td></tr>
-		<td colspan="2">————————————群主指令————————————</td></tr>
-		<tr><td>清屏</td><td>/清屏</td></tr>
-		<tr><td>艾特全体人员(可以发送消息也可以不填)</td><td>/at[消息]</td></tr>
-		<tr><td>清除本群警告</td><td>/清除本群警告</td></tr>
-		<tr><td>设置代管</td><td>/mod[QQ号/@QQ]</td></tr>
-		<tr><td>取消代管</td><td>/demod[QQ号/@QQ]</td></tr>
-		<tr><td>增加白名单</td><td>/群加白[QQ号/@QQ]</td></tr>
-		<tr><td>去除白名单</td><td>/群去白[QQ号/@QQ]</td></tr>
-		<tr><td>设置警告禁言时间</td><td>/设置警告禁言时间[分钟]</td></tr>
-		<tr><td>开启满警告后拉黑(默认开启)</td><td>/开启满警告后拉黑</td></tr>
-		<tr><td>关闭满警告后拉黑</td><td>/关闭满警告后拉黑</td></tr>
-		<tr><td>开启退群拉黑(默认关闭)</td><td>/开启退群拉黑</td></tr>
-		<tr><td>关闭退群拉黑</td><td>/关闭退群拉黑</td></tr>
-		<tr><td>开启被踢拉黑(默认开启)</td><td>/开启被踢拉黑</td></tr>
-		<tr><td>关闭被踢拉黑</td><td>/关闭被踢拉黑</td></tr>
-		<tr><td>开启广告监控(默认开启)</td><td>/开启广告监控</td></tr>
-		<tr><td>关闭广告监控</td><td>/关闭广告监控</td></tr>
-		<tr><td>开启刷屏监控(默认开启)</td><td>/开启刷屏监控</td></tr>
-		<tr><td>关闭刷屏监控</td><td>/关闭刷屏监控</td></tr>
-		<tr><td>开启发言限字(默认开启)</td><td>/开启发言限字</td></tr>
-		<tr><td>关闭发言限字</td><td>/关闭发言限字</td></tr>
-		<tr><td>设置限字字数(默认300字)</td><td>/设置限字字数</td></tr>
-		<tr><td>开启发言限行(默认开启)</td><td>/开启发言限行</td></tr>
-		<tr><td>关闭发言限行</td><td>/关闭发言限行</td></tr>
-		<tr><td>设置限行行数(默认12行)</td><td>/设置限行行数</td></tr>
-		<tr><td>开启发言限空(默认关闭)</td><td>/开启发言限空</td></tr>
-		<tr><td>关闭发言限空</td><td>/关闭发言限空</td></tr>
-		<tr><td>开启文件监控(请同时设置一下下面的,否则屁用没有)(默认关闭)</td><td>/开启文件监控</td></tr>
-		<tr><td>关闭文件监控</td><td>/关闭文件监控</td></tr>
-		<tr><td>开启仅允许指定格式(和仅禁止冲突)</td><td>/开启仅允许指定格式</td></tr>
-		<tr><td>设置允许文件格式</td><td>/设置允许文件格式</td></tr>
-		<tr><td>开启仅禁止指定格式(和仅允许冲突)</td><td>/开启仅禁止指定格式</td></tr>
-		<tr><td>设置禁止文件格式</td><td>/设置禁止文件格式</td></tr>
-		<tr><td>设置上传惩戒(默认警告)</td><td>/设置上传惩戒</td></tr>
-		<tr><td>一键改名</td><td>/一键改名</td></tr>
-		<tr><td>设置名片格式(设置的时候不需要打空格!!!!)(可用变量:[昵称][性别])(例:测试丶[昵称])</td><td>/设置名片格式</td></tr>
-		<tr><td>设置昵称变量长度(昵称最长多长 默认20)</td><td>/设置昵称变量长度</td></tr>
-		<tr><td>设置男性变量(默认为♂)</td><td>/设置男性变量</td></tr>
-		<tr><td>设置女性变量(默认为♀)</td><td>/设置女性变量</td></tr>
-		<tr><td>设置未知性别变量(默认为?)</td><td>/设置未知性别变量</td></tr>
-		<tr><td>开启进群自动改名(默认关闭)</td><td>/开启进群自动改名</td></tr>
-		<tr><td>关闭进群自动改名</td><td>/关闭进群自动改名</td></tr>
-		<tr><td>开启发言检测名片(默认关闭)</td><td>/开启发言检测名片</td></tr>
-		<tr><td>关闭发言检测名片</td><td>/关闭发言检测名片</td></tr>
-		<tr><td>开启锁定普通群员名片(默认关闭)</td><td>/开启锁定群名片</td></tr>
-		<tr><td>关闭锁定普通群员名片</td><td>/关闭锁定群名片</td></tr>
-		<tr><td>开启改名忽略(默认关闭)</td><td>/开启改名忽略</td></tr>
-		<tr><td>关闭改名忽略</td><td>/关闭改名忽略</td></tr>
-		<tr><td>设置改名忽略名单(请填写qq号,如填写多个用|隔开)</td><td>/设置改名忽略名单</td></tr>
-		<tr><td>设置改名忽略词(改名时忽略名片带xxx词的,用|隔开)</td><td>/设置改名忽略词</td></tr>
-		<tr><td>改名忽略名单</td><td>/改名忽略名单</td></tr>
-		<tr><td>设置审核进群方式(默认通过)</td><td>/设置审核进群方式</td></tr>
-		<tr><td>开启禁止重复进群(默认关闭)</td><td>/开启禁止重复进群</td></tr>
-		<tr><td>关闭禁止重复进群</td><td>/关闭禁止重复进群</td></tr>
-		<tr><td>设置禁止重复进群群号</td><td>/设置禁止重复进群群号</td></tr>
-		<tr><td>开启拒绝黑名单(默认开启)</td><td>/开启拒绝黑名单</td></tr>
-		<tr><td>关闭拒绝黑名单</td><td>/关闭拒绝黑名单</td></tr>
-		<tr><td>开启仅通过群员邀请(默认关闭)</td><td>/开启仅通过群员邀请</td></tr>
-		<tr><td>关闭仅通过群员邀请</td><td>/关闭仅通过群员邀请</td></tr>
-		<tr><td>设置等级分(1级多少分)(自动审核)</td><td>/设置等级分</td></tr>
-		<tr><td>设置理由分(有理由多少分)(自动审核)</td><td>/设置理由分</td></tr>
-		<tr><td>设置邀请分(被邀请加多少分)(自动审核)</td><td>/设置邀请分</td></tr>
-		<tr><td>设置会员分(如果是QQ会员加多少分)(自动审核)</td><td>/设置会员分</td></tr>
-		<tr><td>设置超会分(如果是超级会员加多少分)(自动审核)</td><td>/设置超会分</td></tr>
-		<tr><td>设置年费分(如果是年费会员加多少分)(自动审核)</td><td>/设置年费分</td></tr>
-		<tr><td>设置通过分(分数应该大于多少才通过)(自动审核)</td><td>/设置通过权重分</td></tr>
-		<tr><td>开启进群自动解除禁言(默认关闭)</td><td>/开启进群解除禁言</td></tr>
-		<tr><td>关闭进群自动解除禁言</td><td>/关闭进群解除禁言</td></tr>
-		<tr><td>清除本群邀请记录</td><td>/清除本群邀请记录</td></tr>
+		<td colspan="2">以下为管理员/群主可以使用的指令：</td></tr>
+		<tr><td>踢人</td><td>t [你要处理的人]</td></tr>
+		<tr><td>警告</td><td>警告 [你要处理的人]</td></tr>
+		<tr><td>清除某人警告</td><td>清除警告 [你要处理的人]</td></tr>
+		<tr><td>清除本群所有人的警告</td><td>清除本群所有警告 [你要处理的人]</td></tr>
+		<tr><td>禁言</td><td>禁言[你要处理的人] 时间</td></tr>
+		<tr><td>添加黑名单</td><td>添加黑名单[你要处理的人]</td></tr>
+		<tr><td>删除黑名单</td><td>删除黑名单[你要处理的人]</td></tr>
+		<tr><td>获取本群的黑名单</td><td>取本群黑名单</td></tr>
+		<tr><td>添加白名单</td><td>添加白名单[你要处理的人]</td></tr>
+		<tr><td>删除白名单</td><td>删除白名单[你要处理的人]</td></tr>
+		<tr><td>获取本群的白名单</td><td>取本群白名单</td></tr>
+		<tr><td>开启全员禁言</td><td>全员禁言 开启</td></tr>
+		<tr><td>关闭全员禁言</td><td>全员禁言 关闭</td></tr>
+		<td colspan="2">以下指令只有群主可用：</td></tr>
+		<tr><td>设置名片格式</td><td>设置名片格式[格式]（可用的变量：[name]、[性别]、[地区]）（例如：.设置名片格式LX丶[name]）</td></tr>
+		<tr><td>一键修改所有成员群名片</td><td>一键改名</td></tr>
+		<tr><td>开启进群自动修改名片</td><td>开启进群自动改名</td></tr>
+		<tr><td>关闭进群自动修改名片</td><td>关闭进群自动改名</td></tr>
+		<tr><td>开启锁定普通群员名片</td><td>开启锁定普通群员名片</td></tr>
+		<tr><td>关闭锁定普通群员名片</td><td>关闭锁定普通群员名片</td></tr>
+		<tr><td>设置进群审核方式</td><td>设置审核进群方式</td></tr>
 		</tbody>
     </table>
 </main>
