--- a/test.html
+++ b/test.html
@@ -39,6 +39,8 @@
 		<tr><td>获取本群的白名单</td><td>取本群白名单</td></tr>
 		<tr><td>开启全员禁言</td><td>全员禁言 开启</td></tr>
 		<tr><td>关闭全员禁言</td><td>全员禁言 关闭</td></tr>
+		<tr><td>解除禁言</td><td>解除禁言[你要处理的人]</td></tr>
+		<tr><td>查别人邀请记录</td><td>查别人邀请记录[你要查的人]</td></tr>
 		<td colspan="2">以下指令只有群主可用：</td></tr>
 		<tr><td>设置名片格式</td><td>设置名片格式[格式]（可用的变量：[name]、[性别]、[地区]）（例如：.设置名片格式LX丶[name]）</td></tr>
 		<tr><td>一键修改所有成员群名片</td><td>一键改名</td></tr>
